# Cure

./: CMakeLists.txt  README.md
toolbox/: CMakeLists.txt  ChangeLog  dummy.txt
toolbox/src/: CMakeLists.txt
toolbox/src/AddressBank/: CMakeLists.txt  README.threads
toolbox/src/AddressBank/include/: Address.hh  AddressBank.hh  AddressFcnHook.hh  AddressList.hh  AddressMaker.hh  CommandAddress.hh  CommandExecuter.hh  ConfigFileReader.hh  DataFilter.hh  DataFilterAddress.hh  DataPort.hh  DataSlot.hh  DataSlotAddress.hh  DebugAddress.hh  DeviceAddress.hh  FileAddress.hh  FileAddressManager.hh  FilterBankAddress.hh  PoseArchive.hh  PoseFilter.hh  RLDisplayHelper.hh  RLDisplaySICK.hh  ServiceAddress.hh  ServiceAddressProxy.hh  SmartDataList.hh  SocketAddress.hh  ThreadMerger.hh  ThreadSwitcher.hh
toolbox/src/AddressBank/src/: Address.cc  AddressBank.cc  AddressFcnHook.cc  AddressList.cc  AddressMaker.cc  CommandAddress.cc  CommandExecuter.cc  ConfigFileReader.cc  ConvertSICK2ver4.cc  Converter.cc  DataFilter.cc  DataFilterAddress.cc  DataPort.cc  DataSlot.cc  DataSlotAddress.cc  DebugAddress.cc  DeviceAddress.cc  FileAddress.cc  FileAddressManager.cc  FilterBankAddress.cc  PoseArchive.cc  PoseFilter.cc  RLDisplayHelper.cc  RLDisplaySICK.cc  ServiceAddress.cc  ServiceAddressProxy.cc  SmartDataList.cc  SocketAddress.cc  ThreadMerger.cc  ThreadSwitcher.cc  ranger.ccf  setMeasurementInfo.cc  testAddressFcnHook.cc  testConfigFileReader.cc  testDataSlotAddress.cc  testFileAddressManager.cc  testPackedData.cc  testPoseArchive.cc  testSmartDataList.cc  testa.cc
toolbox/src/Filters/: CMakeLists.txt  Makefile.am
toolbox/src/Filters/include/: ArithmaticFilter.hh  CollisionAvoidance.hh  DeadReckoner.hh  FilterAddressMaker.hh  FuseFilter.hh  GyroAdjOdometry.hh  GyroModel.hh  MeasSequencer.hh  MotionCommand.hh  PanTiltModel.hh  PoseCumulator.hh  PoseErrorModel.hh  SLAMFilter.hh  ScanLineFilter.hh  SensorUser.hh  SimpleOdoModel.hh  Syncronizer.hh
toolbox/src/Filters/src/: ArithmaticFilter.cc  CollisionAvoidance.cc  Converter.cc  DeadReckoner.cc  FilterAddressMaker.cc  FuseFilter.cc  GyroAdjOdometry.cc  GyroModel.cc  MeasSequencer.cc  PanTiltModel.cc  Pluto2Cure.cc  PoseCumulator.cc  PoseErrorModel.cc  SLAMFilter.cc  ScanLineFilter.cc  SensorUser.cc  SimpleOdoModel.cc  Syncronizer.cc  demo.cc  demo.fig  demo2.cc  demo3.cc
toolbox/src/Geometry/: CMakeLists.txt  Makefile.am
toolbox/src/Geometry/include/: Line2D.hh  Line3D.hh  Plane.hh  Point2D.hh  Point3D.hh
toolbox/src/Geometry/src/: Line2D.cc  Line3D.cc  Plane.cc  Point2D.cc  Point3D.cc  testg.cc
toolbox/src/Math/: CMakeLists.txt
toolbox/src/Math/include/: BinaryMatrix.hh  BlockMatrix.hh  ChiSquare.hh  CircleCloud.hh  IntersectionEllipseEllipse.hh  LinkedArray.hh  LongArray.hh  LongList.hh  Matrix.hh  MatrixStuff.hh  NormalDistrGenerator.hh  Point2DCloud.hh  Polynomial.hh  PolynomialRoots.hh  ShortMatrix.hh  SparseMatrix.hh  Trig.hh  Vector2D.hh  Vector3D.hh
toolbox/src/Math/src/: BinaryMatrix.cc  BlockMatrix.cc  ChiSquare.cc  CircleCloud.cc  IntersectionEllipseEllipse.cc  LinkedArray.cc  LongArray.cc  Matrix.cc  Point2DCloud.cc  Polynomial.cc  PolynomialRoots.cc  ShortMatrix.cc  SparseMatrix.cc  Trig.cc  Vector2D.cc  Vector3D.cc  demoMatrix.cc  demoMatrix.cc~  testp.cc
toolbox/src/SensorData/: CMakeLists.txt
toolbox/src/SensorData/include/: Command.hh  DataSet.hh  GenericData.hh  GridData.hh  Measurement.hh  MeasurementSet.hh  Odometry.hh  PackedCommand.hh  PackedGeneric.hh  PackedGrid.hh  PackedMeasurementSet.hh  PackedSICK.hh  PackedSensorPose.hh  PackedSonar.hh  PackedState.hh  PackedTimestampedString.hh  PackedVision.hh  SICKDefines.h  SICKScan.hh  SensorData.hh  SensorOffset.hh  SensorPose.hh  SmartData.hh  SonarData.hh  StateData.hh  TimestampedString.hh  VisionData.hh
toolbox/src/SensorData/src/: Command.cc  DataSet.cc  GenericData.cc  GridData.cc  Measurement.cc  MeasurementSet.cc  Odometry.cc  PackedCommand.cc  PackedGeneric.cc  PackedGrid.cc  PackedMeasurementSet.cc  PackedSICK.cc  PackedSensorPose.cc  PackedSonar.cc  PackedState.cc  PackedTimestampedString.cc  PackedVision.cc  SICKScan.cc  SensorData.cc  SensorOffset.cc  SensorPose.cc  SmartData.cc  SonarData.cc  StateData.cc  TimestampedString.cc  VisionData.cc  addVersionToPacked.cc  splitTypeAddN.cc  testd.cc
toolbox/src/Sensory/: -  CMakeLists.txt
toolbox/src/Sensory/include/: CameraHelper.hh  OdoHelper.hh  RangeHough.hh
toolbox/src/Sensory/src/: CameraHelper.cc  OdoHelper.cc  RangeHough.cc  camCalIn.txt  camCalIn2.txt  camCalResult.txt  camCalib.cc
toolbox/src/Transformation/: CMakeLists.txt
toolbox/src/Transformation/include/: CureDefines.hh  DataDescriptor.hh  PackedData.hh  PackedPose.hh  Pose2D.hh  Pose3D.hh  PoseTree.hh  Rotation2D.hh  Rotation3D.hh  TimestampedData.hh  Transformation.hh  Transformation2D.hh  Transformation3D.hh
toolbox/src/Transformation/src/: DataDescriptor.cc  PackedData.cc  PackedPose.cc  Pose2D.cc  Pose3D.cc  PoseTree.cc  Rotation2D.cc  Rotation3D.cc  Timestamp.cc  TimestampedData.cc  Transformation2D.cc  Transformation3D.cc  testp.cc
toolbox/src/Utils/: CMakeLists.txt
toolbox/src/Utils/include/: CircularBuffer.hh  CureDebug.hh  HelpFunctions.hh  KeyReader.hh  Logger.hh  MutexHelper.hh  MutexWrapper.hh  RoboLookMsg.h  RoboLookProxy.h  SocketWrapper.hh  ThreadWrapper.hh  copied_ptr.h  counted_ptr.h  cow_ptr.h  cow_ptr.h~  noncopyable.hh
toolbox/src/Utils/src/: CureDebug.cc  KeyReader.cc  MutexHelper.cc  RoboLookProxy.cc  SocketWrapper.cc  ThreadWrapper.cc  testCureDebug.cc  testKeyReader.cc  testThreadWrapper.cc
toolbox/src/transformation/: CMakeLists.txt
